@@ -1,3 +1,7 @@
+### 2022-08-01
+
+1. Fixed init VMap component's props
+
 ### 2022-07-30
 
 1. Fixed watch map's props.
